--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,8 @@
   "version": "4.6.8",
   "description": "An extension for checking if .git is exposed in visited websites",
   "icons": {
-    "16": "icons/dotgit-16.png",
-    "32": "icons/dotgit-32.png",
-    "48": "icons/dotgit-48.png",
-    "96": "icons/dotgit-96.png",
-    "128": "icons/dotgit-128.png"
+    "64":"icons/dotrip-64.png",
+    "32":"icons/dotgit-32.png"
   },
   "permissions": [
     "*://*/*",
