--- a/manifestv3.json
+++ b/manifestv3.json
@@ -4,8 +4,9 @@
   "version": "4.6.7",
   "description": "An extension for checking if .git is exposed in visited websites",
   "icons": {
+    "32":"icons/dotrip-32.png",
     "64":"icons/dotrip-64.png",
-    "32":"icons/dotgit-32.png"
+    "512": "icons/dotrip-512.png"
   },
   "permissions": [
     "webRequest",
