added checking for bxconf files

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 2,
-  "name": "DotRip",
+  "name": "DotDrip",
   "version": "4.6.8",
-  "description": "An extension for checking if .git is exposed in visited websites",
+  "description": "An extension for checking known vlunerabilites",
   "icons": {
-    "32":"icons/dotrip-32.png",
-    "64":"icons/dotrip-64.png",
-    "512": "icons/dotrip-512.png"
+    "32":"icons/dotdrip-32.png",
+    "64":"icons/dotdrip-64.png",
+    "512": "icons/dotdrip-512.png"
   },
   "permissions": [
     "*://*/*",
@@ -23,7 +23,7 @@
     ]
   },
   "browser_action": {
-    "default_title": "DotRip",
+    "default_title": "DotDrip",
     "default_popup": "popup/popup.html"
   },
   "options_ui": {
